# defend-A-pedia--vocabulary

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
assets/diagrams/: term_matrix.json
brand/mrdefendable/: README.md  page-structure.md  voice-guide.md
brand/offensetotheshed/: README.md  content-pillars.md  media-to-dataset-pipeline.md  pain-in-the-shed-podcast.md
brand/painintheshed/: README.md  distribution.md  episode-template.md
data/: backend_field_map.jsonl  client_language_map.jsonl  cre_to_defendableos_map.jsonl  scoring_dials.jsonl  vocabulary_terms.jsonl
docs/doctrine/: 00_defendable_language_map.md  00_manifesto.md  01_language_is_infrastructure.md  02_cre_to_defendableos.md  03_jr_broker_sr_broker_doctrine.md  06_hive_doctrine.md  (+12 more)
engagement-records/: DDEED-AWARD-DOS-001-v1.json  DDEED-FOUNDER-ORIGIN-MRDOS-001-v1.json
from-the-desk/: 000-from-dev-day-one-reciprocity.md  001-offense-to-the-shed.md  002-the-6am-to-6pm-raise.md
scripts/: build_cross_reference_index.py  build_index.py  export_backend_map.py  export_client_dictionary.py  generate_docs_site.py  generate_sha256_manifest.py  generate_term_matrix.py  issue_vocabulary_deed.py  mint_vocabulary_object.py  snapshot_vocabulary_state.py  upload_to_object_storage.py  validate_jsonl.py  validate_schemas.py  validate_terms.py  verify_deed_integrity.py
tests/: conftest.py  test_cross_reference_links.py  test_jsonl_validity.py  test_required_term_fields.py  test_schema_alignment.py  test_vocabulary_integrity.py
tools/: cost_to_mint.py
(+367 files in other folders)
